benerin path makara lagi

--- a/index.html
+++ b/index.html
@@ -813,55 +813,55 @@
     <p>Fakultas Ilmu Budaya</p>
   </div>
   <div class="faculty-item" onclick="showPopup(['Hantu/FPSI, FISIP, FIB-HANTU.png'])">
-    <img src="makara/image 10.png" alt="FISIP">
+    <img src="Makara/image 10.png" alt="FISIP">
     <p>Fakultas Ilmu Sosial dan Politik</p>
   </div>
   <div class="faculty-item" onclick="showPopup(['Hantu/HUKUM-HANTU.png'])">
-    <img src="makara/makara-fh.png" alt="FH">
+    <img src="Makara/makara-fh.png" alt="FH">
     <p>Fakultas Hukum</p>
   </div>
   <div class="faculty-item" onclick="showPopup(['Hantu/teksas-HANTU.png'])">
-    <img src="makara/makara-ft.png" alt="FAKULTAS TEKNIK">
+    <img src="Makara/makara-ft.png" alt="FAKULTAS TEKNIK">
     <p>Fakultas Teknik</p>
   </div>
   <div class="faculty-item" onclick="showPopup(['Hantu/COMING SOON.png'])">
-    <img src="makara/makara-fasilkom.png" alt="FASILKOM">
+    <img src="Makara/makara-fasilkom.png" alt="FASILKOM">
     <p>Fakultas Ilmu Komputer</p>
   </div>
   <div class="faculty-item" onclick="showPopup(['Hantu/FMIPA (1).png', 'hantu/FMIPA (2).png', 'Hantu/FMIPA (3).png'])">
-    <img src="makara/makara-fmipa.png" alt="FMIPA">
+    <img src="Makara/makara-fmipa.png" alt="FMIPA">
     <p>Fakultas Matematika dan Ipa</p>
   </div>
   <div class="faculty-item" onclick="showPopup(['Hantu/COMING SOON.png'])">
-    <img src="makara/fk.png" alt="FK">
+    <img src="Makara/fk.png" alt="FK">
     <p>Fakultas Kedokteran</p>
   </div>
   <div class="faculty-item" onclick="showPopup(['Hantu/COMING SOON.png'])">
-    <img src="makara/fkg.png" alt="FKG">
+    <img src="Makara/fkg.png" alt="FKG">
     <p>Fakultas Kedokteran Gigi</p>
   </div>
   <div class="faculty-item" onclick="showPopup(['Hantu/COMING SOON.png'])">
-    <img src="makara/farmasi2.png" alt="FARMASI">
+    <img src="Makara/farmasi2.png" alt="FARMASI">
     <p>Fakultas Farmasi</p>
   </div>
   <div class="faculty-item" onclick="showPopup(['Hantu/COMING SOON.png'])">
-    <img src="makara/makara-ui-fik.png" alt="FIK">
+    <img src="Makara/makara-ui-fik.png" alt="FIK">
     <p>Fakultas Ilmu Keperawatan</p>
   </div>
   <div class="faculty-item" onclick="showPopup(['Hantu/FPSI.png', 'Hantu/FPSI, FISIP, FIB-HANTU.png'])">
-    <img src="makara/makara-fpsi.png" alt="FPSI">
+    <img src="Makara/makara-fpsi.png" alt="FPSI">
     <p>Fakultas Psikologi</p>
   </div>
   <div class="faculty-item" onclick="showPopup(['Hantu/COMING SOON.png'])">
-    <img src="makara/makara-feb.png" alt="FEB">
+    <img src="Makara/makara-feb.png" alt="FEB">
     <p>Fakultas Ekonomi dan Bisnis</p>
   </div>
   <div class="faculty-item" onclick="showPopup(['Hantu/COMING SOON.png'])">
-    <img src="makara/farmasi2.png" alt="FKM">
+    <img src="Makara/farmasi2.png" alt="FKM">
     <p>Fakultas Kesehatan Masyarakat</p>
   </div>
   <div class="faculty-item" onclick="showPopup(['Hantu/MENARA AIR (1).png])">
-    <img src="makara/fia.png" alt="FIA">
+    <img src="Makara/fia.png" alt="FIA">
     <p>Fakultas Ilmu Administrasi</p>
   </div>
 </section>
