--- a/index.html
+++ b/index.html
@@ -930,27 +930,27 @@
         <div class="comments-list">
           <!-- Contoh komentar -->
           <div class="comment">
-            <h4>FufuFafa <span style="font-size: 0.8em; color: #aaa;">9 years ago</span></h4>
+            <h4>FufuFafa <span style="font-size: 0.8em; color: #aaa;"></span></h4>
             <p>Saya waktu berkunjung ke salah satu Fakultas UI, dan tanpa saya sengaja, saya bertemu dengan sosok perempuan berambut panjang.</p>
           </div>
           <div class="comment">
-            <h4>Mas Narji <span style="font-size: 0.8em; color: #aaa;">10 hours ago</span></h4>
+            <h4>Mas Narji <span style="font-size: 0.8em; color: #aaa;"></span></h4>
             <p>Saya waktu berkunjung di Fakultas Vokasi, saya melihat sosok bayangan putih di air mancur vokasi dan menyanyikan sebuah lagu.</p>
           </div>
           <div class="comment">
-            <h4>Andi <span style="font-size: 0.8em; color: #aaa;">2 days ago</span></h4>
+            <h4>Andi <span style="font-size: 0.8em; color: #aaa;"></span></h4>
             <p>Waktu malam hari, saya merasa ada sesuatu yang aneh di Fakultas Kedokteran. Apakah benar ada cerita di sana?</p>
           </div>
           <div class="comment">
-            <h4>Siti <span style="font-size: 0.8em; color: #aaa;">5 hours ago</span></h4>
+            <h4>Siti <span style="font-size: 0.8em; color: #aaa;"></span></h4>
             <p>Saya mendengar cerita dari teman saya, apakah itu hanya mitos?</p>
           </div>
           <div class="comment">
-            <h4>Rani <span style="font-size: 0.8em; color: #aaa;">30 minutes ago</span></h4>
+            <h4>Rani <span style="font-size: 0.8em; color: #aaa;"></span></h4>
             <p>Saya pernah melihat sosok di Gedung Rektorat! Menyeramkan!</p>
           </div>
           <div class="comment">
-            <h4>Jojon <span style="font-size: 0.8em; color: #aaa;">30 minutes ago</span></h4>
+            <h4>Jojon <span style="font-size: 0.8em; color: #aaa;"></span></h4>
             <p>Saya pernah liat juga, ada gondoruwo di vokasi, gede banget sumpah. Pas itu juga saya ngeliat ada tuyul lagi muter muter buat nyari duit</p>
           </div>
         </div>
