final nih bosss

--- a/coba coba.html
+++ b/coba coba.html
@@ -762,9 +762,9 @@
     <!-- Image Slider -->
 <section class="slider-container" id="home"> <!-- This ID matches the link target -->
     <div class="slider" id="slider">
-        <img src="header1.png" alt="Image 1">
-        <img src="header2.png" alt="Image 2">
-        <img src="header3.png" alt="Image 3">
+        <img src="header1.png">
+        <img src="header2.png">
+        <img src="header3.png">
     </div>
     <!-- Dot Indicators -->
     <div class="dot-container" id="dotContainer">
@@ -986,9 +986,9 @@
                 <img src="gallery/jalan cinta.jpg" alt="Jalan Cinta" 
                      onclick="showPopup(['Hantu/JALAN CINTA-HANTU.png'])">
                 <img src="gallery/psj.jpg" alt="PSJ" 
-                     onclick="showPopup(['Hantu/FPSI, FISIP, FIB-HANTU.png'])">
-                <img src="gallery/jalan setapak.jpg" alt="Jalan Setapak" 
                      onclick="showPopup(['Hantu/FIB-HANTU(1).png'])">
+                <img src="gallery/jalan setapak.jpg" alt="Jalan Setapak" 
+                     onclick="showPopup(['Hantu/FPSI, FISIP, FIB-HANTU.png'])">
             </div>
             <button class="slide-btn right" onclick="slideRight()">&#9654;</button>
         </div>
