--- a/index.html
+++ b/index.html
@@ -669,7 +669,7 @@
         top: 50%;
         background: rgba(255, 255, 255, 0.5);
         border: none;
-        font-size: 40px;
+        font-size: 20px;
         cursor: pointer;
         color: white;
         padding: 10px;
@@ -791,9 +791,9 @@
     <!-- Image Slider -->
 <section class="slider-container" id="home"> <!-- This ID matches the link target -->
     <div class="slider" id="slider">
-        <img src="urig-1.png" alt="Image 1">
-        <img src="urig-2.png" alt="Image 2">
-        <img src="urig-3.png" alt="Image 3">
+        <img src="header1.png" alt="Image 1">
+        <img src="header2.png" alt="Image 2">
+        <img src="header3.png" alt="Image 3">
     </div>
     <!-- Dot Indicators -->
     <div class="dot-container" id="dotContainer">
