--- a/index.html
+++ b/index.html
@@ -865,7 +865,7 @@
     <img src="Makara/makara-fasilkom.png" alt="FASILKOM">
     <p>Fakultas Ilmu Komputer</p>
   </div>
-  <div class="faculty-item" onclick="showPopup(['Hantu/FMIPA (1).png', 'hantu/FMIPA (2).png', 'Hantu/FMIPA (3).png'])">
+  <div class="faculty-item" onclick="showPopup(['Hantu/FMIPA (1).png', 'Hantu/FMIPA (2).png', 'Hantu/FMIPA (3).png'])">
     <img src="Makara/makara-fmipa.png" alt="FMIPA">
     <p>Fakultas Matematika dan Ipa</p>
   </div>
