--- a/index.html
+++ b/index.html
@@ -894,7 +894,7 @@
     <p>Fakultas Ekonomi dan Bisnis</p>
   </div>
   <div class="faculty-item" onclick="showPopup(['Hantu/COMING SOON.png'])">
-    <img src="Makara/farmasi2.png" alt="FKM">
+    <img src="Makara/fkm2.png" alt="FKM">
     <p>Fakultas Kesehatan Masyarakat</p>
   </div>
   <div class="faculty-item" onclick="showPopup(['Hantu/MENARA AIR (1).png'])">
